--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     -->
     
 
-    <title>React App</title>
+    <title>Cositas App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
